# utymap

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/cmake/Unity3D/: Unity3DNativePluginExport.cmake
core/cmake/host/: CMakeLists.txt
core/lib/clipper/: clipper.cpp  clipper.hpp
core/lib/triangle/: triangle.c
core/shared/: Application.hpp  CMakeLists.txt  Callbacks.hpp  ExportElementVisitor.hpp  ExportLib.cpp
core/src/: BoundingBox.hpp  CMakeLists.txt  Exceptions.hpp  GeoCoordinate.hpp  LodRange.hpp  QuadKey.hpp
core/src/builders/: BuilderContext.hpp  ElementBuilder.hpp  ExternalBuilder.hpp  MeshBuilder.cpp  MeshBuilder.hpp  MeshContext.hpp  QuadKeyBuilder.cpp  QuadKeyBuilder.hpp  TileBuilder.cpp  TileBuilder.hpp
core/src/entities/: Area.hpp  Element.hpp  ElementVisitor.hpp  Node.hpp  Relation.hpp  Way.hpp
core/src/formats/: FormatTypes.hpp
core/src/heightmap/: ElevationProvider.hpp  ElevationProviderFactory.hpp  FlatElevationProvider.hpp  GridElevationProvider.hpp  SrtmElevationProvider.hpp
core/src/index/: ElementGeometryClipper.cpp  ElementGeometryClipper.hpp  ElementStore.cpp  ElementStore.hpp  GeoStore.cpp  GeoStore.hpp  InMemoryElementStore.cpp  InMemoryElementStore.hpp  LodRange.hpp  PersistentElementStore.cpp  PersistentElementStore.hpp  StringTable.cpp  StringTable.hpp
core/src/lsys/: LSystem.hpp  LSystemParser.cpp  LSystemParser.hpp  Rules.hpp  Turtle.cpp  Turtle.hpp  Turtle3d.cpp  Turtle3d.hpp
core/src/mapcss/: Color.hpp  ColorGradient.hpp  MapCssParser.cpp  MapCssParser.hpp  Style.hpp  StyleConsts.cpp  StyleConsts.hpp  StyleDeclaration.cpp  StyleDeclaration.hpp  StyleEvaluator.cpp  StyleEvaluator.hpp  StyleProvider.cpp  StyleProvider.hpp  StyleSheet.cpp  StyleSheet.hpp  TextureAtlas.hpp  TextureAtlasParser.cpp  TextureAtlasParser.hpp
core/src/math/: LineLinear.hpp  Mesh.hpp  Polygon.hpp  Quaternion.hpp  Rectangle.hpp  Vector2.hpp  Vector3.hpp
core/src/meshing/: MeshBuilder.cpp  MeshBuilder.hpp  MeshTypes.hpp  Polygon.hpp
core/src/utils/: CompatibilityUtils.hpp  CoreUtils.hpp  ElementUtils.hpp  GeoUtils.hpp  GeometryUtils.hpp  GradientUtils.cpp  GradientUtils.hpp  LruCache.hpp  MapCssUtils.hpp  MathUtils.hpp  MeshUtils.hpp  NoiseUtils.cpp  NoiseUtils.hpp  SvgBuilder.hpp
core/test/: BoundingBoxTest.cpp  CMakeLists.txt  ExportLibTest.cpp  config.hpp  main.cpp
core/test/builders/: LineGridSplitterTest.cpp  TerraBuilderTest.cpp
core/test/entities/: ElementTest.cpp
core/test/heightmap/: GridElevationProviderTest.cpp  SrtmElevationProviderTest.cpp
core/test/index/: ElementStoreTest.cpp  InMemoryElementStoreTest.cpp  PersistentElementStoreTest.cpp  StringTableTest.cpp
core/test/lsys/: LSystemParserTest.cpp  RulesTest.cpp  StringTurtle.hpp  TreeTurtleTest.cpp  TurtleTest.cpp
core/test/mapcss/: MapCssParserTest.cpp  StyleDeclarationTest.cpp  StyleProviderTest.cpp  StyleTest.cpp  TextureAtlasParserTest.cpp
core/test/meshing/: MeshBuilderTest.cpp
core/test/test_utils/: DependencyProvider.hpp  ElementUtils.hpp  MapCssUtils.hpp
core/test/utils/: GeoUtilsTest.cpp  GeometryUtilsTest.cpp  GradientUtilsTest.cpp  MapCssUtilsTest.cpp  NoiseUtilsTest.cpp
src/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  CommonTypes.hpp  ExportLib.h  GeoCoordinate.hpp  QuadKey.cpp  QuadKey.hpp  TileLoader.cpp  TileLoader.hpp
src/builders/: BuilderContext.hpp  ElementBuilder.hpp  ExternalBuilder.hpp  TerraBuilder.cpp  TerraBuilder.hpp  TileBuilder.cpp  TileBuilder.hpp
src/builders/buildings/: LowPolyBuildingBuilder.cpp  LowPolyBuildingBuilder.hpp
src/builders/terrain/: LineGridSplitter.hpp  TerraBuilder.cpp  TerraBuilder.hpp
src/entities/: Area.hpp  Element.hpp  ElementVisitor.hpp  Node.hpp  Relation.hpp  Way.hpp
src/formats/: FormatTypes.hpp  OsmTypes.hpp  Types.hpp
src/formats/osm/: MultipolygonProcessor.cpp  MultipolygonProcessor.hpp  OsmDataVisitor.cpp  OsmDataVisitor.hpp
src/formats/pbf/: OsmPbfParser.hpp  OsmPbfReader.hpp
src/formats/shape/: ShapeDataVisitor.hpp  ShapeParser.hpp
src/heightmap/: ElevationProvider.hpp  FlatElevationProvider.hpp
src/index/: ElementStore.cpp  ElementStore.hpp  GeoStore.cpp  GeoStore.hpp  GeoUtils.hpp  InMemoryElementStore.cpp  InMemoryElementStore.hpp  LodRange.hpp  OsmDataVisitor.cpp  OsmDataVisitor.hpp  PersistentElementStore.cpp  PersistentElementStore.hpp  ShapeDataVisitor.hpp  StringTable.cpp  StringTable.hpp  Style.hpp  StyleFilter.cpp  StyleFilter.hpp
src/mapcss/: Color.hpp  ColorGradient.hpp  Grammar.hpp  MapCssParser.cpp  MapCssParser.hpp  Parser.cpp  Parser.hpp  Style.hpp  StyleDeclaration.cpp  StyleDeclaration.hpp  StyleProvider.cpp  StyleProvider.hpp  StyleSheet.cpp  Stylesheet.cpp  Stylesheet.hpp
src/meshing/: LineGridSplitter.hpp  MeshBuilder.cpp  MeshBuilder.hpp  MeshTypes.hpp  Polygon.hpp  Triangle.c
src/terrain/: CellBuilder.hpp  LineGridSplitter.hpp  MeshRegion.hpp  TerraBuilder.cpp  TerraBuilder.hpp  TileBuilder.cpp  TileBuilder.hpp
src/types/: BoundingBox.hpp
src/utils/: CompatibilityUtils.hpp  CoreUtils.hpp  ElementUtils.hpp  GeoUtils.hpp  GeometryUtils.hpp  GradientUtils.cpp  GradientUtils.hpp  MapCssUtils.hpp  MurmurHash3.cpp  NoiseUtils.cpp  NoiseUtils.hpp  SimplexNoise.cpp  SimplexNoise.hpp  SvgBuilder.hpp
test/: BoundingBoxTest.cpp  CMakeLists.txt  ExportLibTest.cpp  config.hpp  main.cpp
test/builders/: TerraBuilderTest.cpp
test/entities/: ElementTest.cpp
test/formats/: OsmDataVisitor.hpp  ShapeDataVisitor.hpp  TestOsmDataVisitor.hpp  TestShapeDataVisitor.hpp
test/index/: ElementStoreTest.cpp  GeoUtilsTest.cpp  ShapeDataVisitorTest.cpp  StringTableTest.cpp  StyleFilterTest.cpp
test/mapcss/: MapCssParserTest.cpp  ParserTest.cpp  StyleDeclarationTest.cpp  StyleProviderTest.cpp  StylesheetTest.cpp
test/meshing/: LineGridSplitterTest.cpp  MeshBuilderTest.cpp
test/terrain/: LineGridSplitterTest.cpp  TerraBuilderTest.cpp
test/test_assets/: berlin.osm.pbf  berlin.osm.xml
test/test_utils/: ElementUtils.hpp  MapCssUtils.hpp
test/utils/: GeoUtilsTest.cpp  GradientUtilsTest.cpp
(+761 files in other folders)
