set(HEADER_FILES
                ${LIB_SOURCE}/clipper/clipper.hpp
                ${LIB_SOURCE}/hashing/MurmurHash3.h
                ${LIB_SOURCE}/triangle/triangle.h
                ${LIB_SOURCE}/shapefile/shapefil.h
                BoundingBox.hpp
                Exceptions.hpp
                GeoCoordinate.hpp
                QuadKey.hpp
                builders/ElementBuilder.hpp
                builders/ExternalBuilder.hpp
                builders/TerraBuilder.hpp
                builders/TileBuilder.hpp
                entities/Element.hpp
                entities/ElementVisitor.hpp
                entities/Node.hpp
                entities/Relation.hpp
                entities/Way.hpp
                entities/Area.hpp
                formats/FormatTypes.hpp
                formats/pbf/fileformat.pb.h
                formats/pbf/osmformat.pb.h
                formats/pbf/OsmPbfParser.hpp
                formats/shape/ShapeParser.hpp
                formats/xml/OsmXmlParser.hpp
                heightmap/ElevationProvider.hpp
                heightmap/FlatElevationProvider.hpp
                index/GeoStore.hpp
                index/GeoUtils.hpp
                index/ElementStore.hpp
                index/InMemoryElementStore.hpp
                index/LodRange.hpp
                index/PersistentElementStore.hpp
                index/ShapeDataVisitor.hpp
                index/StringTable.hpp
                mapcss/Color.hpp
                mapcss/ColorGradient.hpp
                mapcss/MapCssParser.hpp
                mapcss/StyleSheet.hpp
                mapcss/Style.hpp
                mapcss/StyleProvider.hpp
                meshing/LineGridSplitter.hpp
                meshing/MeshBuilder.hpp
                meshing/MeshTypes.hpp
                meshing/Polygon.hpp
                utils/CompatibilityUtils.hpp
                utils/CoreUtils.hpp
                utils/GradientUtils.hpp
                utils/MapCssUtils.hpp
                utils/NoiseUtils.hpp
                utils/SvgBuilder.hpp
                )

add_library (UtyMap
                ${HEADER_FILES}
                ${LIB_SOURCE}/clipper/clipper.cpp
                ${LIB_SOURCE}/hashing/MurmurHash3.cpp
                ${LIB_SOURCE}/triangle/triangle.c
                ${LIB_SOURCE}/shapefile/dbfopen.c
                ${LIB_SOURCE}/shapefile/safileio.c
                ${LIB_SOURCE}/shapefile/shpopen.c
                builders/TerraBuilder.cpp
                builders/TileBuilder.cpp
                formats/pbf/fileformat.pb.cc
                formats/pbf/osmformat.pb.cc
                index/ElementStore.cpp
                index/GeoStore.cpp
                index/InMemoryElementStore.cpp
                index/PersistentElementStore.cpp
                index/StringTable.cpp
                mapcss/MapCssParser.cpp
                mapcss/StyleProvider.cpp
                mapcss/StyleSheet.cpp
                meshing/MeshBuilder.cpp
                utils/GradientUtils.cpp
                utils/NoiseUtils.cpp
                )

set_target_properties(UtyMap PROPERTIES LINKER_LANGUAGE CXX)

include_directories (${MAIN_SOURCE} ${LIB_SOURCE})
